# responses-to-completions-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  proxy.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish-ghcr.yml
app/: config.py  main.py
app/models/: legacy_chat_completions.py  legacy_completions.py
app/routes/: chat_completions.py  completions.py  files.py  messages.py  models.py  responses.py
app/services/: antigravity_adapter.py  file_store.py  gemini_adapter.py  model_limits.py  raw_io_logger.py  request_context.py  responses_client.py  responses_payload.py  responses_session_store.py  session_reuse_fallback.py  streaming_adapter.py  transformers.py
scripts/: test_gemini_sdk_e2e.py  test_legacy_completions.py  test_openai_sdk_e2e.py
tests/: test_file_handling.py  test_responses_validation.py  test_transformers_compat.py
